--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
   </div>
 
   <!-- Description -->
-  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
-  <p><strong>Right here from up on the Ridge.</strong></p>
+  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, the unexplained.</p>
+  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT..</strong></p>
 
   <!-- Button Grid -->
   <div class="button-grid">
