--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
   <!-- Description -->
   <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, the unexplained.</p>
-  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT..</strong></p>
+  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT.  LEAVE YOUR MIND OPEN.</strong></p>
 
   <!-- Button Grid -->
   <div class="button-grid">
