--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         justify-content: center;
         gap: 1rem;
         flex-wrap: nowrap;
-        margin-top: 1rem;
-        margin-bottom: 1.5rem;
+        margin: 0.5rem 0 1.5rem 0;
         max-width: 90vw;
       }
 
@@ -111,6 +110,7 @@
 
       .logo {
         height: 300px;
+        margin-bottom: 0.5rem;
       }
     }
 
@@ -239,7 +239,7 @@
 
   <!-- Description -->
   <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, the unexplained.</p>
-  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT.  LEAVE YOUR MIND OPEN.</strong></p>
+  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
   <!-- Button Grid -->
   <div class="button-grid">
@@ -324,3 +324,4 @@
   </script>
 </body>
 </html>
+
