--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
   </div>
 
   <!-- Description -->
-  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, the unexplained.</p>
+  <p>NEW EPISODES EVERY THURSDAY.</p>
+  <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
   <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
   <!-- Button Grid -->
