--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         justify-content: center;
         gap: 1rem;
         flex-wrap: nowrap;
-        margin: 0.5rem 0 1.5rem 0;
+        margin: 0 0 1.5rem 0;
         max-width: 90vw;
       }
 
@@ -110,7 +110,7 @@
 
       .logo {
         height: 300px;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0;
       }
     }
 
