--- a/index.html
+++ b/index.html
@@ -112,6 +112,23 @@
         height: 300px;
         margin-bottom: 0;
       }
+
+      .sound-button-row {
+        display: flex;
+        justify-content: space-around;
+        margin-top: -1rem;
+        gap: 1rem;
+      }
+
+      .sound-button-row img {
+        height: 60px;
+        cursor: pointer;
+      }
+
+      .ridge-button {
+        font-size: 0.9em;
+        padding: 10px;
+      }
     }
 
     p {
