--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
-
-  <!-- Typewriter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
@@ -20,7 +17,6 @@
       padding: 1rem;
       text-align: center;
     }
-
     .logo {
       height: 400px;
       width: auto;
@@ -28,7 +24,6 @@
       animation: flickerLogo 3.2s infinite;
       filter: grayscale(100%);
     }
-
     .portrait-img {
       height: 200px;
       width: auto;
@@ -38,20 +33,17 @@
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
       animation: flicker 2.7s infinite;
     }
-
     @keyframes flicker {
       0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
       20%, 21%, 63% { opacity: 0.4; }
       23% { opacity: 0.8; }
       65% { opacity: 0.3; }
     }
-
     @keyframes flickerLogo {
       0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
       6%, 10%, 13%, 15% { opacity: 0.5; }
       16%, 19% { opacity: 0.2; }
     }
-
     .portrait-wrapper {
       display: flex;
       justify-content: center;
@@ -60,24 +52,20 @@
       flex-wrap: wrap;
       margin-bottom: 2rem;
     }
-
     .portrait-column {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
     }
-
     @media (max-width: 768px) {
       .portrait-wrapper {
         flex-direction: column;
         align-items: center;
       }
-
       .portrait-column {
         display: none;
       }
-
       .portrait-row-mobile {
         display: flex;
         justify-content: center;
@@ -86,13 +74,11 @@
         margin: 0 0 1.5rem 0;
         max-width: 90vw;
       }
-
       .mobile-profile {
         display: flex;
         flex-direction: column;
         align-items: center;
       }
-
       .portrait-img-mobile {
         height: 80px;
         width: auto;
@@ -102,54 +88,50 @@
         transition: all 0.4s ease;
         flex-shrink: 1;
       }
-
       .portrait-img-mobile:hover {
         filter: grayscale(0%) brightness(1.1);
         transform: scale(1.05);
       }
-
       .logo {
         height: 300px;
         margin-bottom: 0;
       }
-
-      .sound-button-row {
-        display: flex;
-        justify-content: space-around;
-        margin-top: -1rem;
-        gap: 1rem;
+      .button-grid {
+        grid-template-columns: 1fr;
       }
-
-      .sound-button-row img {
+      .ridge-button {
+        font-size: 0.8em;
+        padding: 10px;
+      }
+      .rusty-grid {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        margin-top: 1rem;
+        flex-wrap: nowrap;
+      }
+      .rusty-button {
+        width: 60px;
         height: 60px;
         cursor: pointer;
       }
-
-      .ridge-button {
-        font-size: 0.9em;
-        padding: 10px;
-      }
     }
-
     p {
       font-size: 1.2em;
       max-width: 700px;
       margin: 0 auto 1rem;
     }
-
     .button-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
       width: 100%;
       max-width: 800px;
-      margin: 1.5rem 0;
+      margin: 1.5rem 0 0 0;
     }
-
     .ridge-link {
       text-decoration: none;
     }
-
     .ridge-button {
       background-color: #111;
       color: #eee;
@@ -164,24 +146,32 @@
       transition: background 0.3s, transform 0.2s;
       cursor: pointer;
     }
-
     .ridge-button:hover {
       background-color: #222;
       transform: scale(1.05);
     }
-
+    .rusty-grid {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      margin-top: 1rem;
+      flex-wrap: wrap;
+    }
+    .rusty-button {
+      width: 80px;
+      height: 80px;
+      cursor: pointer;
+    }
     .section {
       margin-top: 2rem;
       max-width: 700px;
       width: 100%;
     }
-
     iframe, audio {
       width: 100%;
       margin-top: 1rem;
       border: none;
     }
-
     input, textarea, button {
       font-family: 'Special Elite', monospace;
       padding: 10px;
@@ -193,14 +183,12 @@
       background-color: #111;
       color: #fff;
     }
-
     button {
       cursor: pointer;
       background-color: #333;
       border-radius: 4px;
       transition: background 0.3s;
     }
-
     button:hover {
       background-color: #555;
     }
@@ -208,7 +196,6 @@
 </head>
 <body>
 
-  <!-- Background Hum with Autoplay Fix -->
   <audio id="bg-audio" src="sounds/creepy_background_final_creaks.mp3" autoplay loop muted hidden></audio>
   <script>
     window.addEventListener('click', function enableAudio() {
@@ -219,7 +206,6 @@
     });
   </script>
 
-  <!-- Portrait and Logo Layout (Desktop) -->
   <div class="portrait-wrapper">
     <div class="portrait-column">
       <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
@@ -234,61 +220,38 @@
     </div>
   </div>
 
-  <!-- Portraits on Mobile (Name Above Image) -->
   <div class="portrait-row-mobile" style="display:none;">
-    <div class="mobile-profile">
-      <p>Drew</p>
-      <img src="DREW.png" alt="Drew" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Rob</p>
-      <img src="ROB.png" alt="Rob" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Steven</p>
-      <img src="STEVEN.png" alt="Steven" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Ty</p>
-      <img src="TY.png" alt="Ty" class="portrait-img-mobile">
-    </div>
+    <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
+    <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
+    <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
+    <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
   </div>
 
-  <!-- Description -->
   <p>NEW EPISODES EVERY THURSDAY.</p>
   <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
   <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
-  <!-- Button Grid -->
   <div class="button-grid">
     <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
     <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-    <div class="ridge-link"><div class="ridge-button" onclick="toggleSounds()">Sounds</div></div>
-    <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button">About</div></a>
-    <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button">Touch Ty's Weener</div></a>
     <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
   </div>
 
-  <!-- Sound Bites -->
-  <div id="sound-section" class="section" style="display: none;">
-    <h2>Sound Bites</h2>
-    <div class="button-grid">
-      <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
-      <button onclick="playSound('sound2')">D in my B</button>
-      <button onclick="playSound('sound3')">GUN SWIM</button>
-    </div>
-    <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-    <audio id="sound2" src="sounds/D in my B.mp3"></audio>
-    <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
+  <div class="rusty-grid">
+    <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
+    <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
+    <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
   </div>
 
-  <!-- Latest Episode Video -->
+  <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+  <audio id="sound2" src="sounds/D in my B.mp3"></audio>
+  <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
+
   <div class="section">
     <h2>Watch the Latest Episode</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
   </div>
 
-  <!-- Latest Audio -->
   <div class="section">
     <h2>Listen to the Latest Episode</h2>
     <audio controls>
@@ -297,7 +260,6 @@
     </audio>
   </div>
 
-  <!-- Newsletter Signup -->
   <div class="section">
     <h2>Subscribe to Our Newsletter</h2>
     <form action="mailto:your@email.com" method="post" enctype="text/plain">
@@ -307,7 +269,6 @@
     </form>
   </div>
 
-  <!-- Comments -->
   <div class="section">
     <h2>Leave a Comment</h2>
     <form action="#" method="post">
@@ -317,18 +278,14 @@
     <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
   </div>
 
-  <!-- Script -->
   <script>
-    function toggleSounds() {
-      const section = document.getElementById('sound-section');
-      section.style.display = section.style.display === 'none' ? 'block' : 'none';
-    }
-
     function playSound(id) {
       const sounds = document.querySelectorAll('audio');
       sounds.forEach(audio => {
-        audio.pause();
-        audio.currentTime = 0;
+        if (audio.id !== id) {
+          audio.pause();
+          audio.currentTime = 0;
+        }
       });
       const selected = document.getElementById(id);
       if (selected) selected.play();
@@ -340,6 +297,8 @@
       }
     });
   </script>
+
 </body>
 </html>
+
 
