--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
 </div>
 
 <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-<audio id="sound2" src="sounds/D in my B.mp3"></audio>
-<audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
-<audio id="sound4" src="sounds/GUN SWIM.mp3"></audio>
+<audio id="sound2" src="sounds/closet dive.mp3"></audio>
+<audio id="sound3" src="sounds/im cold.mp3"></audio>
+<audio id="sound4" src="sounds/D in my B.mp3"></audio>
 
   <div class="section">
     <h2>Watch the Latest Episode</h2>
