--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
 <audio id="sound2" src="sounds/closet dive.mp3"></audio>
 <audio id="sound3" src="sounds/im cold.mp3"></audio>
-<audio id="sound4" src="sounds/D in my B.mp3"></audio>
+<audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
 
   <div class="section">
     <h2>Watch the Latest Episode</h2>
