--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     });
   </script>
 
-  <div class="portrait-column">
+<div class="portrait-column">
   <div class="portrait-container">
     <img src="DREW.png" alt="Drew" class="portrait-img">
     <div class="hover-bio">
@@ -267,11 +267,12 @@
     </div>
     <p>Drew</p>
   </div>
-  <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
+  <div>
+    <img src="TY.png" alt="Ty" class="portrait-img">
+    <p>Ty</p>
+  </div>
 </div>
 
-      <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
-    </div>
     <div>
       <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
     </div>
