--- a/index.html
+++ b/index.html
@@ -58,6 +58,55 @@
       align-items: center;
       gap: 1rem;
     }
+    .portrait-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .hover-bio {
+      position: absolute;
+      bottom: 220px;
+      background-color: rgba(20, 20, 20, 0.95);
+      color: #fff;
+      padding: 10px 15px;
+      width: 250px;
+      text-align: left;
+      font-size: 0.85em;
+      border: 1px solid #666;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(255,255,255,0.1);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      z-index: 10;
+      pointer-events: none;
+      animation: flickerBorder 3s infinite;
+    }
+    .portrait-container:hover .hover-bio {
+      opacity: 1;
+    }
+    @keyframes flickerBorder {
+      0%, 100% {
+        border-color: #666;
+        box-shadow: 0 0 8px rgba(255,255,255,0.1);
+      }
+      10% {
+        border-color: #999;
+        box-shadow: 0 0 12px rgba(255,255,255,0.2);
+      }
+      20% {
+        border-color: #444;
+        box-shadow: 0 0 5px rgba(255,255,255,0.05);
+      }
+      30% {
+        border-color: #777;
+        box-shadow: 0 0 15px rgba(255,255,255,0.3);
+      }
+      40% {
+        border-color: #333;
+        box-shadow: 0 0 6px rgba(255,255,255,0.08);
+      }
+    }
     @media (max-width: 768px) {
       .portrait-wrapper {
         flex-direction: column;
@@ -192,59 +241,6 @@
     button:hover {
       background-color: #555;
     }
-    .portrait-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.hover-bio {
-  position: absolute;
-  bottom: 220px;
-  background-color: rgba(20, 20, 20, 0.95);
-  color: #fff;
-  padding: 10px 15px;
-  width: 250px;
-  text-align: left;
-  font-size: 0.85em;
-  border: 1px solid #666;
-  border-radius: 8px;
-  box-shadow: 0 0 8px rgba(255,255,255,0.1);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  z-index: 10;
-  pointer-events: none;
-  animation: flickerBorder 3s infinite;
-}
-
-.portrait-container:hover .hover-bio {
-  opacity: 1;
-}
-
-@keyframes flickerBorder {
-  0%, 100% {
-    border-color: #666;
-    box-shadow: 0 0 8px rgba(255,255,255,0.1);
-  }
-  10% {
-    border-color: #999;
-    box-shadow: 0 0 12px rgba(255,255,255,0.2);
-  }
-  20% {
-    border-color: #444;
-    box-shadow: 0 0 5px rgba(255,255,255,0.05);
-  }
-  30% {
-    border-color: #777;
-    box-shadow: 0 0 15px rgba(255,255,255,0.3);
-  }
-  40% {
-    border-color: #333;
-    box-shadow: 0 0 6px rgba(255,255,255,0.08);
-  }
-}
-
   </style>
 </head>
 <body>
@@ -259,23 +255,25 @@
     });
   </script>
 
-<div class="portrait-column">
-  <div class="portrait-container">
-    <img src="DREW.png" alt="Drew" class="portrait-img">
-    <div class="hover-bio">
-      Drew – Since his days at Oak Hills High School, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
+  <div class="portrait-wrapper">
+    <div class="portrait-column">
+      <div class="portrait-container">
+        <img src="DREW.png" alt="Drew" class="portrait-img">
+        <div class="hover-bio">
+          Drew – Since his days at Oak Hills High School, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
+        </div>
+        <p>Drew</p>
+      </div>
+      <div>
+        <img src="TY.png" alt="Ty" class="portrait-img">
+        <p>Ty</p>
+      </div>
     </div>
-    <p>Drew</p>
-  </div>
-  <div>
-    <img src="TY.png" alt="Ty" class="portrait-img">
-    <p>Ty</p>
-  </div>
-</div>
 
     <div>
       <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
     </div>
+
     <div class="portrait-column">
       <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
       <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
@@ -299,17 +297,17 @@
     <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
   </div>
 
- <div class="rusty-grid">
-  <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
-  <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
-  <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
-  <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
-</div>
+  <div class="rusty-grid">
+    <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
+    <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
+    <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
+    <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
+  </div>
 
-<audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-<audio id="sound2" src="sounds/closet dive.mp3"></audio>
-<audio id="sound3" src="sounds/im cold.mp3"></audio>
-<audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
+  <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+  <audio id="sound2" src="sounds/closet dive.mp3"></audio>
+  <audio id="sound3" src="sounds/im cold.mp3"></audio>
+  <audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
 
   <div class="section">
     <h2>Watch the Latest Episode</h2>
@@ -364,5 +362,3 @@
 
 </body>
 </html>
-
-
