--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     }
     .hover-bio {
       position: absolute;
-      bottom: 220px;
       background-color: rgba(20, 20, 20, 0.95);
       color: #fff;
       padding: 10px 15px;
@@ -84,6 +83,16 @@
     }
     .portrait-container:hover .hover-bio {
       opacity: 1;
+    }
+    .hover-right {
+      left: 105%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .hover-left {
+      right: 105%;
+      top: 50%;
+      transform: translateY(-50%);
     }
     @keyframes flickerBorder {
       0%, 100% {
@@ -245,120 +254,135 @@
 </head>
 <body>
 
-  <audio id="bg-audio" src="sounds/creepy_background_final_creaks.mp3" autoplay loop muted hidden></audio>
-  <script>
-    window.addEventListener('click', function enableAudio() {
-      const audio = document.getElementById('bg-audio');
-      audio.muted = false;
-      audio.play().catch(e => console.log('Playback error:', e));
-      window.removeEventListener('click', enableAudio);
-    });
-  </script>
+<audio id="bg-audio" src="sounds/creepy_background_final_creaks.mp3" autoplay loop muted hidden></audio>
+<script>
+  window.addEventListener('click', function enableAudio() {
+    const audio = document.getElementById('bg-audio');
+    audio.muted = false;
+    audio.play().catch(e => console.log('Playback error:', e));
+    window.removeEventListener('click', enableAudio);
+  });
+</script>
 
-  <div class="portrait-wrapper">
-    <div class="portrait-column">
-      <div class="portrait-container">
-        <img src="DREW.png" alt="Drew" class="portrait-img">
-        <div class="hover-bio">
-          Drew – Since his days at Oak Hills High School, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
-        </div>
-        <p>Drew</p>
+<div class="portrait-wrapper">
+  <div class="portrait-column">
+    <div class="portrait-container">
+      <img src="DREW.png" alt="Drew" class="portrait-img">
+      <div class="hover-bio hover-right">
+        Drew – Since his days at Oak Hills High School, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
       </div>
-      <div>
-        <img src="TY.png" alt="Ty" class="portrait-img">
-        <p>Ty</p>
+      <p>Drew</p>
+    </div>
+    <div class="portrait-container">
+      <img src="TY.png" alt="Ty" class="portrait-img">
+      <div class="hover-bio hover-right">
+        Ty – A soft-spoken skeptic with a hidden sense of humor, Ty is the team's grounding force. While rarely spooked, he secretly wonders if he’s already been followed home more than once...
       </div>
-    </div>
-
-    <div>
-      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-    </div>
-
-    <div class="portrait-column">
-      <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
-      <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
+      <p>Ty</p>
     </div>
   </div>
 
-  <div class="portrait-row-mobile" style="display:none;">
-    <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
+  <div>
+    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
   </div>
 
-  <p>NEW EPISODES EVERY THURSDAY.</p>
-  <p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
-  <p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
-
-  <div class="button-grid">
-    <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-    <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-    <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+  <div class="portrait-column">
+    <div class="portrait-container">
+      <img src="ROB.png" alt="Rob" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge and 15 years of paranormal encounters in bars and clubs (he believes spirits are drawn to crowds) fuel his obsession. Courage, however, not included.
+      </div>
+      <p>Rob</p>
+    </div>
+    <div class="portrait-container">
+      <img src="STEVEN.png" alt="Steven" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Steven – Techie, skeptic, and comic relief. Steven’s love for horror films only slightly outweighs his disbelief in the supernatural... unless he hears breathing when alone.
+      </div>
+      <p>Steven</p>
+    </div>
   </div>
+</div>
 
-  <div class="rusty-grid">
-    <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
-    <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
-    <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
-    <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
-  </div>
+<div class="portrait-row-mobile" style="display:none;">
+  <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
+  <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
+  <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
+  <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
+</div>
 
-  <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-  <audio id="sound2" src="sounds/closet dive.mp3"></audio>
-  <audio id="sound3" src="sounds/im cold.mp3"></audio>
-  <audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
+<p>NEW EPISODES EVERY THURSDAY.</p>
+<p>Buffalo Ridge is your source for chilling stories, strange events, conspiracy theories, & the unexplained.</p>
+<p><strong>THE FOOL IS THE ONE WHO CLOSES THEIR MIND TO ALTERNATE THEORIES OF THOUGHT. LEAVE YOUR MIND OPEN.</strong></p>
 
-  <div class="section">
-    <h2>Watch the Latest Episode</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
-  </div>
+<div class="button-grid">
+  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
+  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
+  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+</div>
 
-  <div class="section">
-    <h2>Listen to the Latest Episode</h2>
-    <audio controls>
-      <source src="your-latest-episode.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
+<div class="rusty-grid">
+  <img src="rusty_red_button.png" alt="Sound 1" class="rusty-button" onclick="playSound('sound1')">
+  <img src="rusty_red_button.png" alt="Sound 2" class="rusty-button" onclick="playSound('sound2')">
+  <img src="rusty_red_button.png" alt="Sound 3" class="rusty-button" onclick="playSound('sound3')">
+  <img src="rusty_red_button.png" alt="Sound 4" class="rusty-button" onclick="playSound('sound4')">
+</div>
 
-  <div class="section">
-    <h2>Subscribe to Our Newsletter</h2>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="email" placeholder="Your email" required>
-      <button type="submit">Sign Up</button>
-    </form>
-  </div>
+<audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+<audio id="sound2" src="sounds/closet dive.mp3"></audio>
+<audio id="sound3" src="sounds/im cold.mp3"></audio>
+<audio id="sound4" src="sounds/wilhelmscream.mp3"></audio>
 
-  <div class="section">
-    <h2>Leave a Comment</h2>
-    <form action="#" method="post">
-      <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-      <button type="submit">Submit</button>
-    </form>
-    <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-  </div>
+<div class="section">
+  <h2>Watch the Latest Episode</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
+</div>
 
-  <script>
-    function playSound(id) {
-      const sounds = document.querySelectorAll('audio');
-      sounds.forEach(audio => {
-        if (audio.id !== id) {
-          audio.pause();
-          audio.currentTime = 0;
-        }
-      });
-      const selected = document.getElementById(id);
-      if (selected) selected.play();
-    }
+<div class="section">
+  <h2>Listen to the Latest Episode</h2>
+  <audio controls>
+    <source src="your-latest-episode.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
 
-    window.addEventListener("load", () => {
-      if (window.innerWidth <= 768) {
-        document.querySelector(".portrait-row-mobile").style.display = "flex";
+<div class="section">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form action="mailto:your@email.com" method="post" enctype="text/plain">
+    <input type="text" name="name" placeholder="Your name" required>
+    <input type="email" name="email" placeholder="Your email" required>
+    <button type="submit">Sign Up</button>
+  </form>
+</div>
+
+<div class="section">
+  <h2>Leave a Comment</h2>
+  <form action="#" method="post">
+    <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
+    <button type="submit">Submit</button>
+  </form>
+  <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
+</div>
+
+<script>
+  function playSound(id) {
+    const sounds = document.querySelectorAll('audio');
+    sounds.forEach(audio => {
+      if (audio.id !== id) {
+        audio.pause();
+        audio.currentTime = 0;
       }
     });
-  </script>
+    const selected = document.getElementById(id);
+    if (selected) selected.play();
+  }
+
+  window.addEventListener("load", () => {
+    if (window.innerWidth <= 768) {
+      document.querySelector(".portrait-row-mobile").style.display = "flex";
+    }
+  });
+</script>
 
 </body>
 </html>
