--- a/index.html
+++ b/index.html
@@ -276,8 +276,7 @@
     <div class="portrait-container">
       <img src="TY.png" alt="Ty" class="portrait-img">
       <div class="hover-bio hover-right">
-        Ty – A soft-spoken skeptic with a hidden sense of humor, Ty is the team's grounding force. While rarely spooked, he secretly wonders if he’s already been followed home more than once...
-      </div>
+        Ty – A soft-spoken skeptic with a hidden sense of humor, Ty is the team's grounding force. He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T..  Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
       <p>Ty</p>
     </div>
   </div>
@@ -290,14 +289,14 @@
     <div class="portrait-container">
       <img src="ROB.png" alt="Rob" class="portrait-img">
       <div class="hover-bio hover-left">
-        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge and 15 years of paranormal encounters in bars and clubs (he believes spirits are drawn to crowds) fuel his obsession. Courage, however, not included.
+        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity.  Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.  
       </div>
       <p>Rob</p>
     </div>
     <div class="portrait-container">
       <img src="STEVEN.png" alt="Steven" class="portrait-img">
       <div class="hover-bio hover-left">
-        Steven – Techie, skeptic, and comic relief. Steven’s love for horror films only slightly outweighs his disbelief in the supernatural... unless he hears breathing when alone.
+        Steven – The Genius of the bunch.  The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat.  Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency.  He’s sneaky like that...
       </div>
       <p>Steven</p>
     </div>
