--- a/index.html
+++ b/index.html
@@ -269,17 +269,45 @@
     <div class="portrait-container">
       <img src="DREW.png" alt="Drew" class="portrait-img">
       <div class="hover-bio hover-right">
-        Drew – Since his days at Oak Hills High School, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
+        Drew – Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.
       </div>
       <p>Drew</p>
     </div>
     <div class="portrait-container">
       <img src="TY.png" alt="Ty" class="portrait-img">
       <div class="hover-bio hover-right">
-        Ty – A soft-spoken skeptic with a hidden sense of humor, Ty is the team's grounding force. He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T..  Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
+        TY – The youngest member of the team is also the 3rd Cincinnati west sider (Cincinnati’s West Side... Wes-wes yo!) Ty is the He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
+      </div>
       <p>Ty</p>
     </div>
   </div>
+
+  <div>
+    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
+  </div>
+
+  <div class="portrait-column">
+    <div class="portrait-container">
+      <img src="ROB.png" alt="Rob" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.
+      </div>
+      <p>Rob</p>
+    </div>
+    <div class="portrait-container">
+      <img src="STEVEN.png" alt="Steven" class="portrait-img">
+      <div class="hover-bio hover-left">
+        Steven – The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that...
+      </div>
+      <p>Steven</p>
+    </div>
+  </div>
+</div>
+
+<!-- Rest of your content stays unchanged (buttons, video, audio, forms) -->
+<!-- If you’d like me to re-include the rest below, just say the word -->
+
+
 
   <div>
     <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
