--- a/index.html
+++ b/index.html
@@ -95,35 +95,15 @@
       transform: translateY(-50%);
     }
     @keyframes flickerBorder {
-      0%, 100% {
-        border-color: #666;
-        box-shadow: 0 0 8px rgba(255,255,255,0.1);
-      }
-      10% {
-        border-color: #999;
-        box-shadow: 0 0 12px rgba(255,255,255,0.2);
-      }
-      20% {
-        border-color: #444;
-        box-shadow: 0 0 5px rgba(255,255,255,0.05);
-      }
-      30% {
-        border-color: #777;
-        box-shadow: 0 0 15px rgba(255,255,255,0.3);
-      }
-      40% {
-        border-color: #333;
-        box-shadow: 0 0 6px rgba(255,255,255,0.08);
-      }
+      0%, 100% { border-color: #666; box-shadow: 0 0 8px rgba(255,255,255,0.1); }
+      10% { border-color: #999; box-shadow: 0 0 12px rgba(255,255,255,0.2); }
+      20% { border-color: #444; box-shadow: 0 0 5px rgba(255,255,255,0.05); }
+      30% { border-color: #777; box-shadow: 0 0 15px rgba(255,255,255,0.3); }
+      40% { border-color: #333; box-shadow: 0 0 6px rgba(255,255,255,0.08); }
     }
     @media (max-width: 768px) {
-      .portrait-wrapper {
-        flex-direction: column;
-        align-items: center;
-      }
-      .portrait-column {
-        display: none;
-      }
+      .portrait-wrapper { flex-direction: column; align-items: center; }
+      .portrait-column { display: none; }
       .portrait-row-mobile {
         display: flex;
         justify-content: center;
@@ -150,17 +130,9 @@
         filter: grayscale(0%) brightness(1.1);
         transform: scale(1.05);
       }
-      .logo {
-        height: 300px;
-        margin-bottom: 0;
-      }
-      .button-grid {
-        grid-template-columns: 1fr;
-      }
-      .ridge-button {
-        font-size: 0.8em;
-        padding: 10px;
-      }
+      .logo { height: 300px; margin-bottom: 0; }
+      .button-grid { grid-template-columns: 1fr; }
+      .ridge-button { font-size: 0.8em; padding: 10px; }
       .rusty-grid {
         display: flex;
         justify-content: center;
@@ -168,11 +140,7 @@
         margin-top: 1rem;
         flex-wrap: nowrap;
       }
-      .rusty-button {
-        width: 60px;
-        height: 60px;
-        cursor: pointer;
-      }
+      .rusty-button { width: 60px; height: 60px; cursor: pointer; }
     }
     p {
       font-size: 1.2em;
@@ -187,9 +155,7 @@
       max-width: 800px;
       margin: 1.5rem 0 0 0;
     }
-    .ridge-link {
-      text-decoration: none;
-    }
+    .ridge-link { text-decoration: none; }
     .ridge-button {
       background-color: #111;
       color: #eee;
@@ -215,11 +181,7 @@
       margin-top: 1rem;
       flex-wrap: wrap;
     }
-    .rusty-button {
-      width: 80px;
-      height: 80px;
-      cursor: pointer;
-    }
+    .rusty-button { width: 80px; height: 80px; cursor: pointer; }
     .section {
       margin-top: 2rem;
       max-width: 700px;
@@ -247,9 +209,7 @@
       border-radius: 4px;
       transition: background 0.3s;
     }
-    button:hover {
-      background-color: #555;
-    }
+    button:hover { background-color: #555; }
   </style>
 </head>
 <body>
@@ -276,7 +236,7 @@
     <div class="portrait-container">
       <img src="TY.png" alt="Ty" class="portrait-img">
       <div class="hover-bio hover-right">
-        TY – The youngest member of the team is also the 3rd Cincinnati west sider (Cincinnati’s West Side... Wes-wes yo!) Ty is the He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
+        TY – The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
       </div>
       <p>Ty</p>
     </div>
@@ -298,33 +258,6 @@
       <img src="STEVEN.png" alt="Steven" class="portrait-img">
       <div class="hover-bio hover-left">
         Steven – The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that...
-      </div>
-      <p>Steven</p>
-    </div>
-  </div>
-</div>
-
-<!-- Rest of your content stays unchanged (buttons, video, audio, forms) -->
-<!-- If you’d like me to re-include the rest below, just say the word -->
-
-
-
-  <div>
-    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-  </div>
-
-  <div class="portrait-column">
-    <div class="portrait-container">
-      <img src="ROB.png" alt="Rob" class="portrait-img">
-      <div class="hover-bio hover-left">
-        Rob – A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity.  Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.  
-      </div>
-      <p>Rob</p>
-    </div>
-    <div class="portrait-container">
-      <img src="STEVEN.png" alt="Steven" class="portrait-img">
-      <div class="hover-bio hover-left">
-        Steven – The Genius of the bunch.  The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat.  Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency.  He’s sneaky like that...
       </div>
       <p>Steven</p>
     </div>
@@ -410,6 +343,9 @@
     }
   });
 </script>
+
+</body>
+</html>
 
 </body>
 </html>
