--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="portrait-container">
       <img src="TY.png" alt="Ty" class="portrait-img">
       <div class="hover-bio hover-right">
-        TY – The youngest member of the team is also the 3rd from Cincinnati’s West Side... (Wes-wes yo!) Ty is the He is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
+        TY – The youngest member of the team is also the 3rd from Cincinnati’s West Side... (Wes-wes yo!) The research expert for the podcast, he is also a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.
       </div>
       <p>Ty</p>
     </div>
